# mms2-sample

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
cmake/: any_config.cmake  concat.cmake  dynlibutils.cmake  gamedata.cmake  logger.cmake  metamod.cmake  sourcesdk.cmake  translations.cmake
cmake/platform/: linux.cmake  shared.cmake  windows.cmake
cmake/sourcesdk/: proto.cmake
gamedata/: gameresource.games.json  gamesystem.games.json  source2server.games.json
include/: concat.hpp  globals.hpp  proto.hpp  sample_plugin.hpp
include/sample/: chat_command_system.hpp  chatcommandsystem.hpp  path_resolver.hpp  pathresolver.hpp  provider.hpp
public/: isample.hpp
src/: concat.cpp  globals.cpp  sample_plugin.cpp
src/sample/: chat_command_system.cpp  chatcommandsystem.cpp  language.cpp  path_resolver.cpp  pathresolver.cpp  player.cpp  player_base.cpp  playerbase.cpp  provider.cpp
src/sample/provider/gamedata/: gameresource.cpp  gamesystem.cpp  source2server.cpp
translations/: sample.phrases.json
